# bazel_ts_project_worker

./: .bazelrc  README.md  WORKSPACE.bazel  export_modules_manifest.patch  package.json
patches/: @bazel+typescript+3.4.2.patch
